Hanimi Org/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_test__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=00k9000000CeywW&quot;, &quot;Green&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_Id__c</fullName>
        <label>Product Image Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <type>TextArea</type>
    </fields>
</CustomObject>